07-OCI-LB-Rancher-Demosu/TLS/02-Production/01-Rancher-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rancher-demosu
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: rancher-demosu
  template:
    metadata:
      labels:
        app.kubernetes.io/name: rancher-demosu
    spec:
      containers:
      - image: dalekurt/rancher-demo:latest
        name: rancher-demosu
