07-OCI-LB-Rancher-Demosu/TLS/02-Production/02-Rancher-service.yml
apiVersion: v1
kind: Service
metadata:
  name: rancher-servisi
  labels:
    app: rancher-demosu
spec:
  type: ClusterIP
  selector:
    app: rancher-demosu
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
