07-OCI-LB-Rancher-Demosu/TLS/02-Production/07-Rancher-Stack-Production-Ingress.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rancher-demosu
spec:
  selector:
    matchLabels:
      app: rancher-demosu
  replicas: 2
  template:
    metadata:
      labels:
        app: rancher-demosu
    spec:
      containers:
      - name: rancher-demosu
        image: dalekurt/rancher-demo:latest
---
apiVersion: v1
kind: Service
metadata:
  name: rancher-servisi
  labels:
    app: rancher-demosu
spec:
  type: ClusterIP
  selector:
    app: rancher-demosu
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-rancher-ingress
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - demoranch.techakademi.com
    secretName: rancher-demosu-tls-staging
  rules:
  - host: demoranch.techakademi.com
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: rancher-servisi
            port:
              number: 80
